--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,41 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% block meta %}
     <meta http-equiv="X-UA-Compatible" conten="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pro Gainer</title>
+    {% endblock  %}
+
+    {% block extra_meta %}
+    {% endblock  %}
+
+
+    <title>Pro Gainer | 
+        {% block extra_title %} {% endblock  %}
+    
+    </title>
+    {% block core_css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    {% endblock  %}
+
+    {% block extra_css %}
+    {% endblock  %}
+
+    {% block extra_js %}
+    {% endblock  %}
   </head>
   <body>
+    <header class="container-fluid fixed-top"></header>
 
-    {% comment %} Bootstrap import {% endcomment %}
+    {% block content %}{% endblock  %}
+    
+    {% block postloadjs %}
+        {% comment %} Bootstrap import {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     {% comment %} Bootstrap popper {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    {% endblock  %}
   </body>
 </html>
