Add(base.html): footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,31 @@
     {% block content %}
 
     {% endblock %}
+
+    <footer>
+      <hr />
+      <div class="container">
+        <div class="row justify-content-center mt-2 text-center">
+          <div class="col-12 col-sm-6 col-md-4">
+            <h3>Gym hours</h3>
+            <p>Monday to Sunday</p>
+            <p>6:00AM -- 11:00 PM</p>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <h3>Contact details</h3>
+            <p>Email: ProGainer@email.com</p>
+            <p>Phone: 0712312311211</p></div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <h3>Useful resources</h3>
+            <p>links</p>
+            <p>links</p>
+            <p>links</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p class="text-center">&copy; 2025 Pro Gainer. All rights reserved. Created by James</p>
+    </footer>
     {% block postloadjs %}
       {% comment %}Bootstrap import{% endcomment %}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
