--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     {% block meta %}
-      <meta http-equiv="X-UA-Compatible" conten="ie=edge" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% endblock %}
@@ -14,14 +14,20 @@
     {% endblock %}
 
     <title>
-      Pro Gainer |{% block extra_title %}
-
+      Pro Gainer | {% block extra_title %}
       {% endblock %}
     </title>
     {% block core_css %}
+      {% comment %}Font awesome{% endcomment %}
+      <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
+      {% comment %}Google fonts{% endcomment %}
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+      {% comment %} Bootstrap css {% endcomment %}
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
-      {% comment %} CSS stylesheet {% endcomment %}
-      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      {% comment %}CSS stylesheet{% endcomment %}
+      <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     {% endblock %}
 
     {% block extra_css %}
@@ -34,8 +40,8 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        {% comment %}Navbar{% endcomment %}
-    {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
+      {% comment %}Navbar{% endcomment %}
+      {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Pro Gainer</a>
@@ -73,7 +79,7 @@
         </div>
       </nav>
     </header>
-    
+
     {% block content %}
 
     {% endblock %}
@@ -90,7 +96,8 @@
           <div class="col-12 col-sm-6 col-md-4">
             <h3>Contact details</h3>
             <p>Email: ProGainer@email.com</p>
-            <p>Phone: 0712312311211</p></div>
+            <p>Phone: 0712312311211</p>
+          </div>
           <div class="col-12 col-sm-6 col-md-4">
             <h3>Useful resources</h3>
             <p>links</p>
