--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,10 @@
       {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Pro Gainer</a>
+          <a class="navbar-brand logo" href="#">
+            <i class="fa-solid fa-hand-fist"></i>
+            Pro Gainer
+        </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -89,17 +92,17 @@
       <div class="container">
         <div class="row justify-content-center mt-2 text-center">
           <div class="col-12 col-sm-6 col-md-4">
-            <h3>Gym hours</h3>
+            <h3 class="subheading">Gym hours</h3>
             <p>Monday to Sunday</p>
             <p>6:00AM -- 11:00 PM</p>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            <h3>Contact details</h3>
+            <h3 class="subheading">Contact details</h3>
             <p>Email: ProGainer@email.com</p>
             <p>Phone: 0712312311211</p>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            <h3>Useful resources</h3>
+            <h3 class="subheading">Useful resources</h3>
             <p>links</p>
             <p>links</p>
             <p>links</p>
