Add(base): Adjust nav links if authenticated

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     {% block meta %}
-      <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% endblock %}
@@ -14,7 +14,8 @@
     {% endblock %}
 
     <title>
-      Pro Gainer | {% block extra_title %}
+      Pro Gainer |{% block extra_title %}
+
       {% endblock %}
     </title>
     {% block core_css %}
@@ -24,7 +25,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
-      {% comment %} Bootstrap css {% endcomment %}
+      {% comment %}Bootstrap css{% endcomment %}
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
       {% comment %}CSS stylesheet{% endcomment %}
       <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -47,7 +48,7 @@
           <a class="navbar-brand logo" href="#">
             <i class="fa-solid fa-hand-fist"></i>
             Pro Gainer
-        </a>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -59,24 +60,29 @@
               </li>
             </ul>
             <div class="d-flex">
-              <li>
-                <p>Item</p>
-              </li>
+              {% comment %}If check to change what authenticated vs non authenticated users see{% endcomment %}
               {% comment %}Dropdown list samplefor profile icon{% endcomment %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="#">Action</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
+              {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user"></i></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="#">Action</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </li>
+              {% else %}
+                <li>
+                    <a href="#" class="m-2">Login</a>
+                    <a href="#" class="m-2">Signup</a>
+                </li>
+              {% endif %}
             </div>
           </div>
         </div>
