Add(base): authentication buttons structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,8 +79,14 @@
                 </li>
               {% else %}
                 <li>
-                    <a href="#" class="m-2">Login</a>
-                    <a href="#" class="m-2">Signup</a>
+                  <ul class="me-auto mb-2 mb-lg-0 d-flex">
+                    <li class="mx-2">
+                      <a href="#" class="m-2 nav-link signup-button">Signup</a>
+                    </li>
+                    <li class="cta-li-container mx-2">
+                      <a href="#" class="cta-btn">Login</a>
+                    </li>
+                  </ul>
                 </li>
               {% endif %}
             </div>
