--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,11 +3,6 @@
 https://github.com/JamesBracken/Ember-Ash
 */
 :root {
-    --clr-primary: #f2eee8; /* Isabeline */
-    --clr-secondary: #e10a0a;  /* Red*/
-    --clr-to-be-filled: ;  /* Fill out with tertiary color */
-    --clr-black: #454545; /* Onyx */
-    --clr-white: #ffffff; /* White */
     --clr-primary: #f2eee8;
     /* Isabeline */
     --clr-secondary: #e10a0a;
@@ -163,4 +158,24 @@ header {
     padding: 8px 0;
 }
 
+/* Adding separate styles for the CTA to attract attention */
+.cta-btn {
+    margin: 0 !important;
+    color: var(--clr-white);
+    padding: 9px 24px;
+    font-weight: var(--fw-semi-bold);
+    background-color: #6F6866;
+    border-radius: 0;
+    border: 0;
+}
+
+.cta-btn:hover {
+    background-color: #595352;
+    transition: 500ms ease-out;
+
+}
+
+.cta-li-container {
+    display: flex;
+    align-items: center;
 }
