Add(base), Style(CSS): footer links

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,20 +104,25 @@
       <div class="container">
         <div class="row justify-content-center mt-2 text-center">
           <div class="col-12 col-sm-6 col-md-4">
-            <h3 class="subheading">Gym hours</h3>
+            <h3 class="subheading  mt-2">Gym hours</h3>
             <p>Monday to Sunday</p>
             <p>6:00AM -- 11:00 PM</p>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            <h3 class="subheading">Contact details</h3>
+            <h3 class="subheading mt-2">Contact details</h3>
             <p>Email: ProGainer@email.com</p>
             <p>Phone: 0712312311211</p>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            <h3 class="subheading">Useful resources</h3>
-            <p>links</p>
-            <p>links</p>
-            <p>links</p>
+            <h3 class="subheading  mt-2">Useful resource links</h3>
+            <ul>
+              <li class="my-2">
+                <a href="https://www.calculator.net/bmi-calculator.html" class="footer-link">BMI Calculator</a>
+              </li>
+              <li class="my-3">
+                <a href="https://www.decathlon.co.uk/sports/fitness-gym/home-gym-equipment-accessories" class="footer-link">Recommended Gym equipment</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
