Add(home): head meta

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block meta %}
+  <meta name="description" content="Home page, welcome to Pro Gainer the site for big gains. Signup for a membership and access the best gyms we have and online assistance." />
+{% endblock %}
+
+{% block extra_title %}
+  Home
+{% endblock %}
 
 {% block content %}
   <section class="home-section">
