--- a/templates/index.html
+++ b/templates/index.html
@@ -18,4 +18,48 @@
         </div>
       </div>
     </section>
+    {% comment %}Gym ammenities cards{% endcomment %}
+    <section>
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-12 col-sm-6 col-md-4 p-2">
+            <div class="card home-descriptions-card">
+              <div class="card-body">
+                <div class="row justify-content-center text-center">
+                  <i class="fa-solid fa-dumbbell text-center"></i>
+                  <h3 class="card-title">The best equipment</h3>
+                  <p class="card-text">Top-tier machines and free weights designed to support strength, cardio, and functional training.</p>
+                </div>
+              </div>
+            </div>
+            <hr />
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 p-2">
+            <div class="card home-descriptions-card">
+              <div class="card-body">
+                <div class="row justify-content-center text-center">
+                  <i class="fa-solid fa-heart-pulse"></i>
+                  <h3 class="card-title">Physical wellness</h3>
+                  <p class="card-text">Personalized wellness plans and guidance to help you stay fit, energized, and injury-free.</p>
+                </div>
+              </div>
+            </div>
+            <hr />
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 p-2">
+            <div class="card home-descriptions-card">
+              <div class="card-body">
+                <div class="row justify-content-center text-center">
+                  <i class="fa-solid fa-list-check"></i>
+                  <h3 class="card-title">Personal trainers</h3>
+                  <p class="card-text">Certified professionals dedicated to helping you achieve your fitness goals safely and effectively</p>
+                </div>
+              </div>
+            </div>
+            <hr />
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
 {% endblock %}
