--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,8 +127,12 @@ hr {
     color: rgba(0, 0, 0, 0.4)
 }
 
+i {
+    font-size: 40px;
+    display: inline-block;
+}
 
-/* Header styles */
+/* HEADER STYLES */
 
 header {
     box-shadow: var(--box-shadow);
@@ -186,6 +190,9 @@ header {
 .cta-li-container {
     display: flex;
     align-items: center;
+}
+
+
 /* MAIN CONTENT STYLES */
 
 .home-hero-img-container {
@@ -196,4 +203,32 @@ header {
 .home-hero-img {
     max-height: 500px;
 }
+
+/* Home description cards  */
+.home-descriptions-card {
+        height: 200px;
+        border-radius: 0;
+        border: 0;
+    }
+
+@media screen and (min-width: 576px) {
+    .home-descriptions-card {
+        height: 280px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    
+}
+
+@media screen and (min-width:1024px) {
+    .home-descriptions-card {
+        height: 240px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .home-descriptions-card {
+        height: 200px;
+    }
 }
