Fix(index): make hero img fill parent

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
   <section class="home-section">
     {% comment %}Hero image section{% endcomment %}
     <section class="home-hero-img-container">
-      <div class="row">
-        <div class="col-12">
-          <img class="home-hero-img" src="{% static 'images/home_page/hero_image.jpg' %}" alt="" />
+      <div class="row h-100">
+        <div class="col-12 h-100">
+          <img class="home-hero-img  h-100" src="{% static 'images/home_page/hero_image.jpg' %}" alt="" />
         </div>
       </div>
     </section>
