Fix(index): swap section with main

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  <section class="home-section">
+  <main class="home-section">
     {% comment %}Hero image section{% endcomment %}
     <section class="home-hero-img-container">
       <div class="row h-100">
@@ -61,5 +61,5 @@
         </div>
       </div>
     </section>
-  </section>
+  </main>
 {% endblock %}
