--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,22 @@
       <div class="row h-100">
         <div class="col-12 h-100">
           <img class="home-hero-img  h-100" src="{% static 'images/home_page/hero_image.jpg' %}" alt="" />
+    {% comment %}CTA section{% endcomment %}
+    <section class="w-100 home-cta-section">
+      <div class="container w-100 p-0">
+        <div class="row home-cta-section w-100">
+          <div class="row cta-section-item-container w-100">
+            <div class="col-12 cta-section-item">
+              <h2>Join us now!</h2>
+            </div>
+            <div class="col-12 cta-section-item">
+              <ul>
+                <li>
+                  <a href="" class="cta-btn">Join here</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
