--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,6 +210,31 @@ header {
 /* Home description cards  */
 .home-descriptions-card {
     height: 200px;
+    border: 0;
+}
+
+/* Home CTA section */
+.home-cta-section {
+    background: url("../images/home_page/cta_section.jpg");
+    background-position: center;
+    color: var(--clr-primary);
+    height: 800px;
+    margin: 0;
+}
+
+.cta-section-item-container {
+    position: relative;
+    right: 0px;
+    align-self:flex-end;
+    justify-content: end;
+    bottom: 30px;
+}
+
+.cta-section-item {
+    display: flex;
+    justify-content: end;
+    /* position: relative;
+    right: 0px; */
 }
 
 @media screen and (min-width: 576px) {
