Add(exercise, base): exercise urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Exercise List</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'exercise_list' %}">Exercise List</a>
               </li>
             </ul>
             <div class="d-flex">
