Style(CSS): exercise list items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,8 +240,21 @@ header {
 .cta-section-item {
     display: flex;
     justify-content: end;
-    /* position: relative;
-    right: 0px; */
+}
+
+/* Exercises styles */
+
+.exercise-item-header {
+    border-bottom: var(--clr-black) solid 1px;
+}
+
+.exercise-item-image,
+.exercise-item-image-container {
+    height: 250px!important;
+}
+
+.exercise-item-content-container {
+    background-color: var(--clr-primary);
 }
 
 @media screen and (min-width: 576px) {
