--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -3,22 +3,24 @@
 {% block content %}
   {% comment %}Exercise list cards section{% endcomment %}
   <main>
-    {% comment %} Cards list section {% endcomment %}
+    {% comment %}Cards list section{% endcomment %}
     <section class="container p-0">
       <div class="row">
         {% for exercise in exercises %}
           <div class="col-12 col-md-6 col-xl-4 p-0">
             <div class="p-5 h-100">
               <div class="row exercise-item-content-container h-100">
-                <div class="col-12 exercise-item-image-container p-0">
-                  <img class="exercise-item-image w-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
-                </div>
-                <div class="col-12 h-100">
-                  <h3 class="my-3 exercise-item-header w-100 pb-3">{{ exercise.exercise_title }}</h3>
-                  <p class="mt-2">Muscles targeted: {{ exercise.targeted_muscles }}</p>
-                  <p class="mt-2">Equipment: {{ exercise.equipment }}</p>
-                  <p class="mt-2">Difficulty: {{ exercise.difficulty }}</p>
-                </div>
+                <a href="" class="p-0">
+                  <div class="col-12 h-100">
+                    <img class="exercise-item-image w-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
+                    <div class="px-3 py-1">
+                      <h3 class="my-3 exercise-item-header w-100 pb-3">{{ exercise.exercise_title }}</h3>
+                      <p class="mt-2">Muscles targeted: {{ exercise.targeted_muscles }}</p>
+                      <p class="mt-2">Equipment: {{ exercise.equipment }}</p>
+                      <p class="mt-2">Difficulty: {{ exercise.difficulty }}</p>
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
