--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  {% comment %}Exercise list cards section{% endcomment %}
   <main>
     {% comment %}Cards list section{% endcomment %}
     <section class="container p-0">
@@ -10,7 +9,7 @@
           <div class="col-12 col-md-6 col-xl-4 p-0">
             <div class="p-5 h-100">
               <div class="row exercise-item-content-container h-100">
-                <a href="" class="p-0">
+                <a href="{% url "exercise_detail" exercise.slug %}" class="p-0">
                   <div class="col-12 h-100">
                     <img class="exercise-item-image w-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
                     <div class="px-3 py-1">
