--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,10 @@ i {
     background-color: #EFF0F0;
 }
 
+.primary-clr-bg {
+    background-color: var(--clr-primary);
+}
+
 /* HEADER STYLES */
 
 header {
