Style(CSS): make footer stick to bottom of page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,13 @@ html {
 body {
     padding-top: 100px;
     max-width: 2500px !important;
-    /* max-width: 1800px !important; */
+    /* height: 100vh; */
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto !important;
 }
 
 /* Push the home section up a bit to touch the header */
