Fix/Add(base):dropdown menu no longer goes out of page, dropdown menu links

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,10 @@
               {% comment %}Dropdown list samplefor profile icon{% endcomment %}
               {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user"></i></a>
-                  <ul class="dropdown-menu">
+                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user"></i></a>
+                  <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     <li>
                       <hr class="dropdown-divider" />
