--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,10 @@ header {
     padding: 8px 0;
 }
 
+.dropdown-menu {
+    border-radius: 0!important;
+}
+
 /* Adding separate styles for the CTA to attract attention */
 .cta-btn {
     margin: 0 !important;
