--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@ html {
 body {
     padding-top: 100px;
     max-width: 2500px !important;
-    /* height: 100vh; */
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
