--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% block meta %}
+
     {% endblock %}
 
     {% block extra_meta %}
@@ -96,6 +97,20 @@
     </header>
 
     <main class="h-100">
+      {% comment %}Message code taken from Code institute Codestar practice project which was done in the course{% endcomment %}
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+              <div class="alert {{ message.tags }} alert-dismissible
+              fade show" id="msg" role="alert">
+                {{ message|safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
       {% block content %}
 
       {% endblock %}
