--- a/exercise/templates/exercise/exercise_form.html
+++ b/exercise/templates/exercise/exercise_form.html
@@ -1,5 +1,19 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-{{ exercise_form }}
-{% endblock  %}
+  {% if user.is_staff %}
+    <section>
+      <div class="container">
+        <div class="row">
+          <form method="POST" action="">
+            <div class="col-12">{{ exercise_form|crispy }}</div>
+            {% csrf_token %}
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="button">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+  {% endif %}
+{% endblock %}
