--- a/exercise/templates/exercise/exercise_form.html
+++ b/exercise/templates/exercise/exercise_form.html
@@ -5,7 +5,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <form method="POST" action="">
+          <form method="POST" action="" enctype="multipart/form-data">
             <div class="col-12">{{ exercise_form|crispy }}</div>
             {% csrf_token %}
             <div class="d-flex justify-content-center">
