Fix(CSS): Correct color for .button:hover class

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@ html {
 body {
     padding-top: 100px;
     max-width: 2500px !important;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
 }
@@ -165,8 +165,8 @@ body button,
 
 body button:hover,
 .button:hover {
-    background-color: #595352;
-    transition: 500ms ease-out;
+    background-color: #c80a0a;
+    transition: 500ms ease-in-out;
 }
 
 body input,
