Add(exercise): exercise_list Add exercise button

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -1,30 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% comment %}Cards list section{% endcomment %}
-    <section class="container p-0">
-      <div class="row">
-        {% for exercise in exercises %}
-          <div class="col-12 col-md-6 col-xl-4 p-0">
-            <div class="p-5 h-100">
-              <div class="row exercise-item-content-container h-100">
-                <a href="{% url "exercise_detail" exercise.slug %}" class="p-0">
-                  <div class="col-12 h-100">
-                    <img class="exercise-item-image w-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
-                    <div class="px-3 py-1">
-                      <h3 class="my-3 exercise-item-header w-100 pb-3">{{ exercise.exercise_title }}</h3>
-                      <p class="mt-2">Muscles targeted: {{ exercise.targeted_muscles }}</p>
-                      <p class="mt-2">Equipment: {{ exercise.equipment }}</p>
-                      <p class="mt-2">Difficulty: {{ exercise.difficulty }}</p>
-                    </div>
+  {% comment %}Cards list section{% endcomment %}
+  <section class="container p-0">
+    <div class="row">
+      {% if user.is_staff %}
+        <div class="col-12 mt-5 d-flex justify-content-center">
+          <a class="text-center button mt-5" href="{% url 'add_exercise_item' %}">Add Exercise</a>
+        </div>
+      {% endif %}
+      {% for exercise in exercises %}
+        <div class="col-12 col-md-6 col-xl-4 p-0">
+          <div class="p-5 h-100">
+            <div class="row exercise-item-content-container h-100">
+              <a href="{% url 'exercise_detail' exercise.slug %}" class="p-0">
+                <div class="col-12 h-100">
+                  <img class="exercise-item-image w-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
+                  <div class="px-3 py-1">
+                    <h3 class="my-3 exercise-item-header w-100 pb-3">{{ exercise.exercise_title }}</h3>
+                    <p class="mt-2">Muscles targeted: {{ exercise.targeted_muscles }}</p>
+                    <p class="mt-2">Equipment: {{ exercise.equipment }}</p>
+                    <p class="mt-2">Difficulty: {{ exercise.difficulty }}</p>
                   </div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
           </div>
-        {% endfor %}
-      </div>
-    </section>
+        </div>
+      {% endfor %}
+    </div>
+  </section>
 
   {% comment %} {{ exercises }} {% endcomment %}
 {% endblock %}
