Add(CSS): improved separation and comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,7 @@ https://github.com/JamesBracken/Ember-Ash
     --fw-extra-bold: 800;
     --fw-bold: 700;
     --fw-semi-bold: 550;
+    --fw-medium: 425
     --fw-regular: 300;
 
     --border-radius: 10px;
@@ -41,7 +42,7 @@ https://github.com/JamesBracken/Ember-Ash
     --transition-duration: 0.3s;
 }
 
-/* GLOBAL STYLES */
+/* GLOBAL STYLES----------------------------- */
 /* setting all styles across the website here to increase uniformity
 across the code and reduce unexpected behaviours and styles */
 
@@ -55,7 +56,6 @@ html {
 body {
     padding-top: 100px;
     max-width: 2500px !important;
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
 }
@@ -145,7 +145,8 @@ i {
     display: inline-block;
 }
 
-.bg-light-grey {
+/* REUSABLE STYLES----------------------------------- */
+/* Background styles */
 .light-grey-bg {
     background-color: #EFF0F0;
 }
@@ -158,6 +159,7 @@ i {
     background-color: var(--clr-black);
 }
 
+/* Text size styles */
 .sz-text-heading-1 {
     font-size: var(--fs-heading-1) !important;
     /* 50px */
@@ -188,6 +190,7 @@ i {
     /* 16px */
 }
 
+/* Font weight styles */
 .fw-text-extra-bold {
     font-weight: var(--fw-extra-bold);
 }
@@ -241,11 +244,8 @@ input {
     border-bottom: #454545 1px solid;
 }
 
-.underline {
-    border-bottom: var(--clr-black) 1px solid;
-}
 
-/* HEADER STYLES */
+/* HEADER STYLES--------------------- */
 
 header {
     box-shadow: var(--box-shadow);
@@ -286,7 +286,7 @@ header {
 }
 
 .dropdown-menu {
-    border-radius: 0!important;
+    border-radius: 0 !important;
 }
 
 /* Adding separate styles for the CTA to attract attention */
