--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <section class="home-hero-img-container p-0 w-100">
     </section>
     {% comment %}Opening introductions section{% endcomment %}
-    <section class="bg-light-grey">
+    <section class="light-grey-bg">
       <div class="container p-0">
         <div class="row justify-content-center">
           <div class="col-12 text-center my-5">
