--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -4,11 +4,25 @@
   {% comment %}Cards list section{% endcomment %}
   <section class="container p-0">
     <div class="row">
+      <div class="col-12">
+        <div class="p-4">
+          <div class="row d-flex">
+            <div class="col-6 black-bg d-flex">
+              <h1 class="white-text align-self-center">Exercises List</h1>
+            </div>
+            <div class="col-6 light-grey-bg  d-flex">
+              <p class="sz-text-heading-2 align-self-center">Select any card to get more details</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% comment %}This button is displayed to admins for them to add exercises to the list{% endcomment %}
       {% if user.is_staff %}
         <div class="col-12 mt-5 d-flex justify-content-center">
           <a class="text-center button mt-5" href="{% url 'add_exercise_item' %}">Add Exercise</a>
         </div>
       {% endif %}
+      {% comment %} Loops through each exercise and creates a card to display each one {% endcomment %}
       {% for exercise in exercises %}
         <div class="col-12 col-md-6 col-xl-4 p-0">
           <div class="p-5 h-100">
