--- a/exercise/templates/exercise/exercise_list.html
+++ b/exercise/templates/exercise/exercise_list.html
@@ -2,16 +2,16 @@
 
 {% block content %}
   {% comment %}Cards list section{% endcomment %}
-  <section class="container p-0">
-    <div class="row">
-      <div class="col-12">
+  <section class="container p-0 mt-5">
+    <div class="row d-flex justify-content-center">
+      <div class="col-12 col-md-10">
         <div class="p-4">
           <div class="row d-flex">
-            <div class="col-6 black-bg d-flex">
-              <h1 class="white-text align-self-center">Exercises List</h1>
+            <div class="col-12 col-sm-6 black-bg d-flex justify-content-center">
+              <h1 class="white-text align-self-center text-center">Exercises List</h1>
             </div>
-            <div class="col-6 light-grey-bg  d-flex">
-              <p class="sz-text-heading-2 align-self-center">Select any card to get more details</p>
+            <div class="col-12 col-sm-6 light-grey-bg d-flex justify-content-center">
+              <p class="sz-text-heading-2 align-self-center text-center">Select any card to get more details</p>
             </div>
           </div>
         </div>
