--- a/exercise/templates/exercise/exercise_list.html
+++ b/exercise/templates/exercise/exercise_list.html
@@ -48,15 +48,15 @@
         <div class="pagination justify-content-center">
           <span class="step-links">
             {% if page_obj.has_previous %}
-              <a href="?page=1">&laquo; first</a>
-              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+              <a class="mx-1 mx-sm-2 underline" href="?page=1">&laquo; first</a>
+              <a class="mx-1 mx-sm-2 underline" href="?page={{ page_obj.previous_page_number }}">previous</a>
             {% endif %}
 
-            <span class="current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+            <span class="current mx-1 mx-sm-3">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
 
             {% if page_obj.has_next %}
-              <a href="?page={{ page_obj.next_page_number }}">next</a>
-              <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+              <a class="mx-1 mx-sm-2 underline" href="?page={{ page_obj.next_page_number }}">next</a>
+              <a class="mx-1 mx-sm-2 underline" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
             {% endif %}
           </span>
         </div>
