Add(membership): add urls in base, project and app levels

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'exercise_list' %}">Exercise List</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'membership_form' %}">Membership</a>
+              </li>
             </ul>
             <div class="d-flex">
               {% comment %}If check to change what authenticated vs non authenticated users see{% endcomment %}
