--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  {% comment %}Admin section{% endcomment %}
+  {% if request.user == is_staff %}
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a href="{% url "edit_exercise_item" exercise.slug %}">Edit exercise</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  {% endif %}
+
   {% comment %}Cards list section{% endcomment %}
   <section class="container p-0">
     <div class="row">
@@ -24,7 +37,7 @@
         <h2>Instructions</h2>
         <p>{{ exercise.instruction }}</p>
 
-        <section>
+        <div>
           <h2>Additional information</h2>
           <p>
             <strong>Targeted muscles:</strong>{{ exercise.targeted_muscles }}
@@ -35,7 +48,7 @@
           <p>
             <strong>Recommended sets and reps:</strong>{{ exercise.recommended_sets }} X {{ exercise.recommended_reps }} (sets X reps)
           </p>
-        </section>
+        </div>
       </div>
     </div>
   </section>
