Fix(exercise): exercise_detail staff if check

--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   {% comment %}Admin section{% endcomment %}
-  {% if request.user == is_staff %}
+  {% if user.is_staff %}
     <section>
       <div class="container">
         <div class="row">
