--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -4,10 +4,10 @@
   {% comment %}Admin section{% endcomment %}
   {% if user.is_staff %}
     <section>
-      <div class="container">
+      <div class="container my-4 mx-3">
         <div class="row">
-          <div class="col-12">
-            <a href="{% url "edit_exercise_item" exercise.slug %}">Edit exercise</a>
+          <div class="col-12 d-flex justify-content-center">
+            <a href="{% url "edit_exercise_item" exercise.slug %}" class="blue-btn text-center">Edit exercise</a>
           </div>
         </div>
       </div>
