--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -7,7 +7,8 @@
       <div class="container my-4 mx-3">
         <div class="row">
           <div class="col-12 d-flex justify-content-center">
-            <a href="{% url "edit_exercise_item" exercise.slug %}" class="blue-btn text-center">Edit exercise</a>
+            <a href="{% url 'edit_exercise_item' exercise.slug %}" class="blue-btn text-center">Edit exercise</a>
+            <button type="button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">Delete Exercise</button>
           </div>
         </div>
       </div>
