--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,7 +222,8 @@ i {
 /* General button styles */
 
 body button,
-.button {
+.button,
+.red-btn {
     margin: 0 !important;
     color: var(--clr-white);
     padding: 9px 24px;
@@ -234,7 +235,8 @@ body button,
 }
 
 body button:hover,
-.button:hover {
+.button:hover,
+.red-btn:hover {
     background-color: #c80a0a;
     transition: 500ms ease-in-out;
 }
