--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -53,8 +53,29 @@
       </div>
     </div>
   </section>
-
-  {% comment %} {{ exercises }} {% endcomment %}
+  {% comment %}Delete exercise confirmation modal section{% endcomment %}
+  <section>
+    {% comment %}Original code taken from bootstrap docs and tweaked https://getbootstrap.com/docs/5.3/components/modal/{% endcomment %}
+    <div id="deleteConfirmationModal" class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header d-flex justify-content-center">
+            <h5 class="modal-title">Confirm exercise deletion</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="text-center">Are you certain you want to delete this exercise?</p>
+            <p class="text-center">
+              <strong>This action cannot be reversed!</strong>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <a href="{% url 'delete_exercise_item' exercise.slug %}" class="red-btn">Delete Exercise</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
 
 {% comment %}
