--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,7 +221,7 @@ i {
 
 /* General button styles */
 
-body button,
+.container button,
 .button,
 .red-btn {
     margin: 0 !important;
@@ -234,7 +234,7 @@ body button,
     margin: 10px 0 !important;
 }
 
-body button:hover,
+.container button:hover,
 .button:hover,
 .red-btn:hover {
     background-color: #c80a0a;
