--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -35,7 +35,7 @@
           {{ redirect_field }}
           {% endslot %}
           {% slot actions %}
-          {% element button type='submit' tags='prominent,login' %}
+          {% element button type='submit' tags='prominent,login' class='button'  %}
           {% trans 'Sign In' %}
           {% endelement %}
           {% endslot %}
@@ -46,12 +46,12 @@
           {% endelement %}
           {% element button_group vertical=True %}
           {% if PASSKEY_LOGIN_ENABLED %}
-            {% element button type='submit' form='mfa_login' id='passkey_login' tags='prominent,login,outline,primary' %}
+            {% element button type='submit' form='mfa_login' class='button'  id='passkey_login' tags='prominent,login,outline,primary' %}
             {% trans 'Sign in with a passkey' %}
             {% endelement %}
           {% endif %}
           {% if LOGIN_BY_CODE_ENABLED %}
-            {% element button href=request_login_code_url tags='prominent,login,outline,primary' %}
+            {% element button href=request_login_code_url tags='prominent,login,outline,primary' class='button'  %}
             {% trans 'Send me a sign-in code' %}
             {% endelement %}
           {% endif %}
